# simpleQRBot

./: CMakeLists.txt
src/: main.cpp
